// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VocabCard /> should adopt color prop 1`] = `
<styled.li
  bgColor="orange"
>
  <Styled(A)
    plainLink={true}
    to="/vocabulary/entry/234"
  >
    <styled.dl
      color="orange"
    >
      <div
        className="reading"
      >
        <dt
          className="kana"
          lang="ja"
        >
          ちかぢか, きんきん, ちかじか
        </dt>
        <dt
          className="character"
          lang="ja"
        >
          近々
        </dt>
        <div
          className="separator"
        />
        <dt
          className="kana"
          lang="ja"
        >
          まもなく
        </dt>
        <dt
          className="character"
          lang="ja"
        >
          間もなく
        </dt>
        <div
          className="separator"
        />
      </div>
      <dd
        className="meaning"
      >
        Before Long, Soon
      </dd>
    </styled.dl>
  </Styled(A)>
</styled.li>
`;

exports[`<VocabCard /> should match baseline snapshot 1`] = `
<styled.li
  bgColor="purple"
>
  <Styled(A)
    plainLink={true}
    to="/vocabulary/entry/234"
  >
    <styled.dl
      color="purple"
    >
      <div
        className="reading"
      >
        <dt
          className="kana"
          lang="ja"
        >
          ちかぢか, きんきん, ちかじか
        </dt>
        <dt
          className="character"
          lang="ja"
        >
          近々
        </dt>
        <div
          className="separator"
        />
        <dt
          className="kana"
          lang="ja"
        >
          まもなく
        </dt>
        <dt
          className="character"
          lang="ja"
        >
          間もなく
        </dt>
        <div
          className="separator"
        />
      </div>
      <dd
        className="meaning"
      >
        Before Long, Soon
      </dd>
    </styled.dl>
  </Styled(A)>
</styled.li>
`;
